gradle 구조 개선 및 개선에 따른 테스트 코드 수정